data/derived/comb/progs/unify/prog1350.ml.out
Characters 31-32:
  let f a x = x**2 in
                 ^
Error: This expression has type int but an expression was expected of type
         float
